# FengDock

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  COOKBOOK.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: deploy.yml  mind-map-sync.yml
app/: __init__.py  auth.py  crud.py  database.py  loblaws.py  main.py  mcp_auth.py  mcp_server.py  models.py  notifications.py  scheduler.py  schemas.py
app/routers/: __init__.py  links.py  loblaws.py  mindmaps.py  todo.py
deploy/: Caddyfile  codex_proxy_with_interception.py
docs/: mind-map.md  submodule-publish-cookbook.md
scripts/: run_servers.py
static/common/: footer.html  footer.js
static/fire/: index.html
static/homepage/: style.css
static/loblaws-board/: app.js  style.css
static/tools/json-viewer/: app.js  style.css
static/tools/todo/: app.js  style.css
tests/: test_conclusion_integration.py  test_json_viewer.py  test_json_viewer_ui.py  test_links_api.py  test_loblaws_board.py  test_mcp_server.py  test_mindmaps_api.py  test_todo_api.py
tools/: json-viewer.html  loblaws-board.html  loblaws-manage.html  todo.html
