[project]
name = "fengdock"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.120.3",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "pytest-playwright>=0.7.1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end browser tests",
]
